k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-stress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-stress-app
  template:
    metadata:
      labels:
        app: k8s-stress-app
    spec:
      containers:
        - name: k8s-stress-app
          image: luizrslj1/k8s-stress-app:v1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5050
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          startupProbe:
            httpGet:
              path: /health
              port: 5050
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 5050
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 5050
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 5
