k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-stress-app
spec:
  type: ClusterIP
  selector:
    app: k8s-stress-app
  ports:
    - port: 80
      targetPort: 5050
