k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-stress-app
spec:
  ingressClassName: nginx
  rules:
    - host: stress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-stress-app
                port:
                  number: 80
